# gooey-gui

./: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  remix.config.js
app/: app.tsx  base.tsx  dataTable.styles.tsx  dataTable.tsx  docs.tsx  downloadButton.tsx  entry.client.tsx  entry.server.tsx  gitbook.tsx  global-progres-bar.tsx  gooeyFileInput.tsx  gooeyInput.tsx  jsonFormInput.tsx  lazyImports.tsx  renderedHTML.tsx  renderedMarkdown.tsx  renderer.tsx  robots.tsx  root.tsx  settings.ts  sms-login.tsx  uppyUrlPlugin.ts  urlUtils.tsx  useHydrated.js  wix.tsx
app/components/: CodeEditor.tsx  GooeyPopover.tsx  GooeySelect.tsx  GooeySwitch.tsx  GooeyTooltip.tsx  Sidebar.tsx  countdown.tsx
app/components/ChatComponents/: GooeyChatWidget.tsx
app/styles/: app.css  custom.css
py/: pyproject.toml
py/examples/: poem_gen.py  poem_gen_thread.py
py/gooey_gui/components/: __init__.py  common.py  modal.py  pills.py
py/gooey_gui/core/: __init__.py  pubsub.py  reloader.py  renderer.py  state_interactions.py
